layouts: * extract background per slide * different match method for title slides

--- a/plugins/layouts/package.json
+++ b/plugins/layouts/package.json
@@ -5,6 +5,8 @@
   "main": "layouts.mjs",
   "scripts": {
     "build": "tsc --project tsconfig.json",
+    "prewatch": "npm run build",
+    "watch": "tsc --project tsconfig.json --watch",
     "test": "jest --watch"
   },
   "type": "module",
